--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install Qt
         uses: jurplel/install-qt-action@v2
         with:
-          host: 'macos'
+          host: 'mac'
       - name: Install dependencies LibGit&Boost
         run: |
          mkdir -p ../libgit2/build
