--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,8 +17,10 @@ jobs:
 
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
-          git add -A
+          git checkout macosReleases
+          git status
+          git add .
+          git status
           git commit -m "Update release.txt"
           git push origin macosReleases
 
