--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
+      - name: add testfile
+        run: |
+          touch testfile.txt
+          echo "hello test.file" >> test.file
       - name: update file and push to remote
         run: |
           echo "Test push for a new Release Build to the macosRelease Branch" >> release.txt
